force-app/main/default/objects/RFQ__c/RFQ__c.object-meta.xml
<CustomObject>
    <description>Track RFQs (Request for Quotes) from customers</description>
    <label>RFQ</label>
    <nameField>
        <displayFormat>RFQ-{0000}</displayFormat>
        <label>RFQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>