force-app/main/default/objects/RFQ__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RFQs (Customer__c)</relationshipLabel>
    <relationshipName>RFQs1</relationshipName>
    <type>Lookup</type>
</CustomField>