force-app/main/default/objects/RFQ__c/fields/New_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Phone__c</fullName>
    <label>New Contact Phone</label>
    <type>Phone</type>
</CustomField>