force-app/main/default/objects/RFQ__c/fields/Product_Intrested__c.field-meta.xml
<CustomField>
    <fullName>Product_Intrested__c</fullName>
    <label>Product Intrested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excavator Swing Frame</fullName>
            </value>
            <value>
                <fullName>Submersible Pump Impeller Casing</fullName>
            </value>
            <value>
                <fullName>Flywheel Housing</fullName>
            </value>
            <value>
                <fullName>Concrete Mixer Drum Flange</fullName>
            </value>
            <value>
                <fullName>Gate Valve Body</fullName>
            </value>
            <value>
                <fullName>Ball Valve Housing</fullName>
            </value>
            <value>
                <fullName>Butterfly Valve Disc</fullName>
            </value>
            <value>
                <fullName>Globe Valve Bonnet</fullName>
            </value>
            <value>
                <fullName>Pressure Relief Valve Body</fullName>
            </value>
            <value>
                <fullName>Air Compressor Cylinder Block</fullName>
            </value>
            <value>
                <fullName>Compressor Valve Plate</fullName>
            </value>
            <value>
                <fullName>Compressor Crankcase</fullName>
            </value>
            <value>
                <fullName>Intercooler Cover for Compressor</fullName>
            </value>
            <value>
                <fullName>Piston Head for Air Compressor</fullName>
            </value>
            <value>
                <fullName>Hydraulic Motor Casing</fullName>
            </value>
            <value>
                <fullName>Hydraulic Cylinder End Cap</fullName>
            </value>
            <value>
                <fullName>Hydraulic Manifold Block</fullName>
            </value>
            <value>
                <fullName>Hydraulic Gear Housing</fullName>
            </value>
            <value>
                <fullName>Hydraulic Reservoir End Plate</fullName>
            </value>
            <value>
                <fullName>Gear Pump Cover</fullName>
            </value>
            <value>
                <fullName>Brake Drum Housing</fullName>
            </value>
            <value>
                <fullName>Backhoe Arm Coupling</fullName>
            </value>
            <value>
                <fullName>Loader Arm End Bracket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>