force-app/main/default/objects/RFQ__c/fields/Required_product_quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_product_quantity__c</fullName>
    <label>Required product quantity</label>
    <type>TextArea</type>
</CustomField>