force-app/main/default/objects/RFQ__c/fields/RFQ_Amount__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>