force-app/main/default/objects/RFQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Contact__c</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Product_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>