force-app/main/default/objects/RFQ__c/listViews/RFQ_List_View.listView-meta.xml
<ListView>
    <fullName>RFQ_List_View</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Expected_Close_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>RFQ List View</label>
</ListView>